# TaaprWare-External-Executor

./: CMakeLists.txt  GUIDE.md  README.md  build-mingw.bat  build.bat  vm_setup.bat
Hypervisor/: CMakeLists.txt  README.md
Hypervisor/include/: svm.h
Hypervisor/src/: svm.c  svm_asm.asm
TaaprWare V3/: AntiCheck.hpp  CMakeLists.txt  ManualMapper.cpp  RuntimeScanner.hpp  Scanner.hpp  build.bat  dllmain.cpp  gui.cpp  hooks.asm  injector.cpp  luavm_load_hook.cpp  luavm_load_hook.h  roblox.h
docs/: ANTI_CHEAT_BYPASS.md
include/: MemoryReader.hpp  ScriptInjector.hpp  Shellcode.h  StealthInjector.h  Syscalls.h
src/: main.cpp  test.cpp
tools/: DOWNLOAD_LINKS.md
